2016-12-31      Oskar Skog      <https://oskog97.com/#contact>
    0.4.15
        * ChangeLog: Hide mail address.
        

2016-12-28      Oskar Skog      <https://oskog97.com/#contact>
    0.4.14
        * anonymine.py (curses_game (print_char)), cursescfg:  Allow non ASCII
            textics on Python3.
        * anonymine.py (input): Don't redraw the window every time there has
            been a non flagging and non revealing mouse events.
        * README: New account play@anonymine-demo.oskog97.com:2222
        * cursescfg:
            - The `pair` index of the tuples has since long been removed.
            - Advice users to scroll at the edges when using the mouse.
            - BUTTON1 and BUTTON3 comment
            - Unicode support comments.
            - Extra wide characters are not supported

2016-12-25      Oskar Skog      <https://oskog97.com/#contact>
    0.4.13
        * anonymine_fields.py (generic_field.reveal): Use a loop instead of
          recursion. Allows really low mine densities.

2016-12-23      Oskar Skog      <https://oskog97.com/#contact>
    0.4.12
        * RELEASE-NOTES: Added some old notes.
        * check.sh: enginecfg.default -> enginecfg.fallback
        * configure.py (find_MODULES): Bugfix:
            "/usr/local/liby-5.4/site-packages"
    0.4.11
        * anonymine.py (curses_game), cursescfg: Mouse support.

2016-12-22      Oskar Skog      <https://oskog97.com/#contact>
    0.4.10
        * cursescfg: Changed to improve contrast.
        * cursescfg, anonymine.py (curses_game): Added an attention mode to
            make it easier to find free cells near the end.

2016-12-20      Oskar Skog      <https://oskog97.com/#contact>
    0.4.9
        * anonymine_engine.py (game_engine.play_game): "time taken to play"
            was calculated after the "Press the any key" screen.
        * anonymine.py (curses_game):
            - Added KeyError to curses_output_cfg
            - Moved print_char below move_visbile area